<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>io.dazzleduck.sql</groupId>
        <artifactId>dazzleduck-parent</artifactId>
        <version>0.0.3</version>
    </parent>

    <artifactId>dazzleduck-sql-flight</artifactId>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <dependencies>
        <dependency>
            <groupId>io.dazzleduck.sql</groupId>
            <artifactId>dazzleduck-sql-common</artifactId>
            <version>0.0.3</version>
        </dependency>
        <dependency>
            <groupId>io.dazzlerduck.sql</groupId>
            <artifactId>dazzleduck-sql-http</artifactId>
            <version>0.0.3</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>